[package]
name = "Blockchain_example"
version = "0.1.0"
edition = "2021"
[lib]
name= "blockchainlib"
path= "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name= "blockchain"
path= "src/main.rs"
[dependencies]
hex="0.3.2"
crypto-hash="0.3.3"